--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,36 +9,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from numpy import vstack\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from numpy import concatenate, vstack\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.utils import resample, shuffle"
+    "from sklearn.utils import shuffle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Construir DataFrame a partir da base de dados.\n",
-    "data_set = pd.read_csv('data/TRN', sep='\\t')"
+    "data_set = pd.read_csv('data/TRN', sep='\\t', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -61,7 +58,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>INDEX</th>\n",
        "      <th>UF_1</th>\n",
        "      <th>UF_2</th>\n",
        "      <th>UF_3</th>\n",
@@ -71,6 +67,7 @@
        "      <th>UF_7</th>\n",
        "      <th>IDADE</th>\n",
        "      <th>SEXO_1</th>\n",
+       "      <th>NIVEL_RELACIONAMENTO_CREDITO01</th>\n",
        "      <th>...</th>\n",
        "      <th>CEP4_7</th>\n",
        "      <th>CEP4_8</th>\n",
@@ -83,11 +80,34 @@
        "      <th>IND_BOM_1_1</th>\n",
        "      <th>IND_BOM_1_2</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>INDEX</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -97,6 +117,7 @@
        "      <td>0</td>\n",
        "      <td>0.135098</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.222222</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -112,7 +133,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -121,6 +141,7 @@
        "      <td>0</td>\n",
        "      <td>0.273504</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.111111</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -135,7 +156,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -145,6 +165,7 @@
        "      <td>0</td>\n",
        "      <td>0.281910</td>\n",
        "      <td>0</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -159,7 +180,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -169,6 +189,7 @@
        "      <td>0</td>\n",
        "      <td>0.225741</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.111111</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -183,7 +204,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -193,6 +213,7 @@
        "      <td>0</td>\n",
        "      <td>0.480403</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.111111</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -207,35 +228,38 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 246 columns</p>\n",
+       "<p>5 rows × 245 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   INDEX  UF_1  UF_2  UF_3  UF_4  UF_5  UF_6  UF_7     IDADE  SEXO_1  \\\n",
-       "0      0     1     1     1     0     0     0     0  0.135098       1   \n",
-       "1      1     1     0     1     0     0     1     0  0.273504       1   \n",
-       "2      2     1     0     1     0     0     1     0  0.281910       0   \n",
-       "3      3     1     1     1     0     0     0     0  0.225741       0   \n",
-       "4      4     1     1     0     0     0     1     0  0.480403       0   \n",
+       "       UF_1  UF_2  UF_3  UF_4  UF_5  UF_6  UF_7     IDADE  SEXO_1  \\\n",
+       "INDEX                                                               \n",
+       "0         1     1     1     0     0     0     0  0.135098       1   \n",
+       "1         1     0     1     0     0     1     0  0.273504       1   \n",
+       "2         1     0     1     0     0     1     0  0.281910       0   \n",
+       "3         1     1     1     0     0     0     0  0.225741       0   \n",
+       "4         1     1     0     0     0     1     0  0.480403       0   \n",
        "\n",
-       "      ...       CEP4_7  CEP4_8  CEP4_9  CEP4_10  CEP4_11  CEP4_12  CEP4_13  \\\n",
-       "0     ...            0       0       1        1        0        1        1   \n",
-       "1     ...            0       1       0        1        1        0        0   \n",
-       "2     ...            1       1       0        0        0        0        1   \n",
-       "3     ...            1       1       0        1        1        0        1   \n",
-       "4     ...            1       1       1        0        0        1        0   \n",
+       "       NIVEL_RELACIONAMENTO_CREDITO01     ...       CEP4_7  CEP4_8  CEP4_9  \\\n",
+       "INDEX                                     ...                                \n",
+       "0                            0.222222     ...            0       0       1   \n",
+       "1                            0.111111     ...            0       1       0   \n",
+       "2                            1.000000     ...            1       1       0   \n",
+       "3                            0.111111     ...            1       1       0   \n",
+       "4                            0.111111     ...            1       1       1   \n",
        "\n",
-       "   CEP4_14  IND_BOM_1_1  IND_BOM_1_2  \n",
-       "0        1            0            1  \n",
-       "1        0            1            0  \n",
-       "2        0            1            0  \n",
-       "3        0            1            0  \n",
-       "4        1            1            0  \n",
+       "       CEP4_10  CEP4_11  CEP4_12  CEP4_13  CEP4_14  IND_BOM_1_1  IND_BOM_1_2  \n",
+       "INDEX                                                                         \n",
+       "0            1        0        1        1        1            0            1  \n",
+       "1            1        1        0        0        0            1            0  \n",
+       "2            0        0        0        1        0            1            0  \n",
+       "3            1        1        0        1        0            1            0  \n",
+       "4            0        0        1        0        1            1            0  \n",
        "\n",
-       "[5 rows x 246 columns]"
+       "[5 rows x 245 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,38 +271,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Separa as classes em DataFrames distintos.\n",
-    "class_1_df = data_set.loc[data_set['IND_BOM_1_2'] == 0]\n",
-    "class_2_df = data_set.loc[data_set['IND_BOM_1_2'] == 1]\n",
-    "\n",
-    "# Balancea as classes através do up-sampling da classe 2.\n",
-    "class_2_up_sampled_df = resample(class_2_df, n_samples=class_1_df.shape[0], random_state=123)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Separa \"features\" de \"targets\" para cada classe, transformando-os em numpy arrays.\n",
-    "class_1_X = class_1_df.iloc[:, :-1].values\n",
-    "class_1_y = class_1_df.iloc[:, -1].values\n",
-    "\n",
-    "class_2_X = class_2_up_sampled_df.iloc[:, :-1].values\n",
-    "class_2_y = class_2_up_sampled_df.iloc[:, -1].values"
+    "# Separa as classes em DataFrames distintos.\n",
+    "class_1_df = data_set.loc[data_set['IND_BOM_1_2'] == 0]\n",
+    "class_2_df = data_set.loc[data_set['IND_BOM_1_2'] == 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Separa \"features\" dos \"targets\" para cada classe, transformando-os em numpy arrays.\n",
+    "class_1_X = class_1_df.iloc[:, :-1].values\n",
+    "class_1_y = class_1_df.iloc[:, -1].values\n",
+    "\n",
+    "class_2_X = class_2_df.iloc[:, :-1].values\n",
+    "class_2_y = class_2_df.iloc[:, -1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Treino: 50%, Validação: 25%, Teste: 25% (para ambas as classes).\n",
@@ -286,47 +311,61 @@
     "    class_1_X, class_1_y, test_size=0.25, random_state=42, stratify=class_1_y)\n",
     "\n",
     "class_1_X_train, class_1_X_val, class_1_y_train, class_1_y_val = train_test_split(\n",
-    "    class_1_X_train, class_1_y_train, test_size=0.33, random_state=42, stratify=class_1_y_train)\n",
+    "    class_1_X_train, class_1_y_train, test_size=(1./3), random_state=42, stratify=class_1_y_train)\n",
     "\n",
     "class_2_X_train, class_2_X_test, class_2_y_train, class_2_y_test = train_test_split(\n",
     "    class_2_X, class_2_y, test_size=0.25, random_state=42, stratify=class_2_y)\n",
     "\n",
     "class_2_X_train, class_2_X_val, class_2_y_train, class_2_y_val = train_test_split(\n",
-    "    class_2_X_train, class_2_y_train, test_size=0.33, random_state=42, stratify=class_2_y_train)"
+    "    class_2_X_train, class_2_y_train, test_size=(1./3), random_state=42, stratify=class_2_y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Concatena os arrays de treinamento das classes (features e targets).\n",
     "X_train = vstack((class_1_X_train, class_2_X_train))\n",
-    "y_train = vstack((class_1_y_train.reshape(class_1_y_train.shape[0], 1),\n",
-    "                  class_2_y_train.reshape(class_2_y_train.shape[0], 1)))\n",
-    "\n",
-    "# Concatena os arrays de teste das classes (features e targets).\n",
-    "X_test = vstack((class_1_X_test, class_2_X_test))\n",
-    "y_test = vstack((class_1_y_test.reshape(class_1_y_test.shape[0], 1),\n",
-    "                  class_2_y_test.reshape(class_2_y_test.shape[0], 1)))\n",
+    "y_train = concatenate([class_1_y_train, class_2_y_train])\n",
     "\n",
     "# Concatena os arrays de validação das classes (features e targets).\n",
     "X_val = vstack((class_1_X_val, class_2_X_val))\n",
-    "y_val = vstack((class_1_y_val.reshape(class_1_y_val.shape[0], 1),\n",
-    "                  class_2_y_val.reshape(class_2_y_val.shape[0], 1)))"
+    "y_val = concatenate([class_1_y_val, class_2_y_val])\n",
+    "\n",
+    "# Concatena os arrays de teste das classes (features e targets).\n",
+    "X_test = vstack((class_1_X_test, class_2_X_test))\n",
+    "y_test = concatenate([class_1_y_test, class_2_y_test])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Over-sampling os conjuntos de treinamento e validação da classe 2 (minoritária).\n",
+    "ros = RandomOverSampler(random_state=0)\n",
+    "\n",
+    "X_train_resampled, y_train_resampled = ros.fit_resample(X_train, y_train)\n",
+    "X_val_resampled, y_val_resampled = ros.fit_resample(X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Aleatorização.\n",
-    "X_train, y_train = shuffle(X_train, y_train, random_state=42)\n",
-    "X_test, y_test = shuffle(X_test, y_test, random_state=42)\n",
-    "X_val, y_val = shuffle(X_val, y_val, random_state=42)"
+    "X_train_resampled, y_train_resampled = shuffle(X_train_resampled, y_train_resampled, random_state=42)\n",
+    "X_val_resampled, y_val_resampled = shuffle(X_val_resampled, y_val_resampled, random_state=42)\n",
+    "X_test, y_test = shuffle(X_test, y_test, random_state=42)"
    ]
   }
  ],
