--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -135,7 +135,10 @@
     "from sklearn.utils import shuffle\n",
     "\n",
     "from talos.model.early_stopper import early_stopper\n",
-    "from talos.model.normalizers import lr_normalizer"
+    "from talos.model.normalizers import lr_normalizer\n",
+    "\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
@@ -384,7 +387,7 @@
    ],
    "source": [
     "# Exibe as 5 primeiras linhas da base de dados.\n",
-    "data_set.head(5)"
+    "data_set.head()"
    ]
   },
   {
@@ -1101,13 +1104,59 @@
     "print('Performance no conjunto de validação:')\n",
     "print_metrics_summary(accuracy, recall, precision, f1, auroc, aupr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run SVM with GridSearch\n",
+    "tuned_parameters = {'kernel': ['rbf', 'linear'], 'gamma': [0.001, 0.0001, 0.00001],\n",
+    "                     'C': [1, 10, 100, 1000]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"# Tuning hyper-parameters for accuracy\")\n",
+    "clf = GridSearchCV(SVC(), tuned_parameters, cv=5,\n",
+    "                   scoring = 'accuracy')\n",
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Best parameters set found on development set:\")\n",
+    "print(clf.best_params_)\n",
+    "\n",
+    "print(\"Grid scores on development set:\")\n",
+    "means = clf.cv_results_['mean_test_score']\n",
+    "stds = clf.cv_results_['std_test_score']\n",
+    "\n",
+    "for mean, std, params in zip(means, stds, clf.cv_results_['params']):\n",
+    "    print(\"%0.3f (+/-%0.03f) for %r\"\n",
+    "          % (mean, std * 2, params))\n",
+    "    \n",
+    "print(\"Detailed classification report:\")\n",
+    "print(\"The model is trained on the full development set.\")\n",
+    "print(\"The scores are computed on the full evaluation set.\")\n",
+    "\n",
+    "y_true, y_pred = y_test, clf.predict(X_test)\n",
+    "print(classification_report(y_true, y_pred))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (redes-neurais)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "if702-redes-neurais"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
