fix markdown cell

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1109,7 +1109,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run SVM with GridSearch\n",
+    "# Run SVM with GridSearch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tuned_parameters = {'kernel': ['rbf', 'linear'], 'gamma': [0.001, 0.0001, 0.00001],\n",
     "                     'C': [1, 10, 100, 1000]}"
    ]
