Persisting SVM model

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1650,6 +1650,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['svc_clf.joblib']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Persistindo o modelo do SVM para uso futuro.\n",
+    "from joblib import dump, load\n",
+    "dump(svc_clf, 'svc_clf.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {
     "scrolled": true
